--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20211205</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.13.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
